{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 183,
  "lineage": "c57f67e4-c76d-275a-1cd5-7484ee6629db",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "datascientest_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b97213e168b04272",
            "arn": "arn:aws:ec2:eu-west-3:885801475464:instance/i-0026756b0d0ec438b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0026756b0d0ec438b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "datascientest_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0686cd2e54b20b73d",
            "private_dns": "ip-10-1-0-218.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.218",
            "public_dns": "ec2-35-180-99-240.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.99.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ac7d8e727c4cea7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021785982f63348aa",
            "tags": {
              "Name": "datascientest-bastion"
            },
            "tags_all": {
              "Name": "datascientest-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1984f04c95c4363"
            ]
          },
          "dependencies": [
            "module.bastion.data.aws_ami.datascientest-ami",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.datascientest_vpc",
            "module.security.aws_key_pair.myec2key",
            "module.security.aws_security_group.sg_22"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008ceb7bf61f673b2",
            "association_id": "eipassoc-06f606626608e4aab",
            "domain": "vpc",
            "id": "eipalloc-008ceb7bf61f673b2",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-096f7e306511a8daf",
            "private_dns": "ip-10-1-0-124.eu-west-3.compute.internal",
            "private_ip": "10.1.0.124",
            "public_dns": "ec2-13-36-130-230.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.130.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b91814b91c7f3991",
            "association_id": "eipassoc-0cc73e03fb68d44b1",
            "domain": "vpc",
            "id": "eipalloc-0b91814b91c7f3991",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0548e3d0806649195",
            "private_dns": "ip-10-1-1-73.eu-west-3.compute.internal",
            "private_ip": "10.1.1.73",
            "public_dns": "ec2-13-39-95-91.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.95.91",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "datascientest_igateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:internet-gateway/igw-0fac8e225ae4050ee",
            "id": "igw-0fac8e225ae4050ee",
            "owner_id": "885801475464",
            "tags": {
              "Name": "datascientest-igateway"
            },
            "tags_all": {
              "Name": "datascientest-igateway"
            },
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_datascientest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:885801475464:loadbalancer/app/datascientest-alb/d103f698310703ee",
            "arn_suffix": "app/datascientest-alb/d103f698310703ee",
            "desync_mitigation_mode": "defensive",
            "dns_name": "datascientest-alb-78968998.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:885801475464:loadbalancer/app/datascientest-alb/d103f698310703ee",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "datascientest-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c7c633845bf60039"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-021785982f63348aa"
              },
              {
                "subnet_id": "subnet-078c51ae083fdf364"
              }
            ],
            "subnets": [
              "subnet-021785982f63348aa",
              "subnet-078c51ae083fdf364"
            ],
            "vpc_id": "vpc-067ecc288a3c2a0ff",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.datascientest_vpc",
            "module.security.aws_security_group.sg_application_lb"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:885801475464:listener/app/datascientest-alb/d103f698310703ee/3a668ac360f6aea6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:885801475464:targetgroup/tf-datascientest-lb-tg/1151a76031ad6865",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:885801475464:listener/app/datascientest-alb/d103f698310703ee/3a668ac360f6aea6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:885801475464:loadbalancer/app/datascientest-alb/d103f698310703ee",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_lb.lb_datascientest",
            "module.networking.aws_lb_target_group.datascientest_vms",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.datascientest_vpc",
            "module.security.aws_security_group.sg_application_lb"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "datascientest_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:885801475464:targetgroup/tf-datascientest-lb-tg/1151a76031ad6865",
            "arn_suffix": "targetgroup/tf-datascientest-lb-tg/1151a76031ad6865",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:885801475464:targetgroup/tf-datascientest-lb-tg/1151a76031ad6865",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-datascientest-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008ceb7bf61f673b2",
            "association_id": "eipassoc-06f606626608e4aab",
            "connectivity_type": "public",
            "id": "nat-03063bc6db5dc7926",
            "network_interface_id": "eni-096f7e306511a8daf",
            "private_ip": "10.1.0.124",
            "public_ip": "13.36.130.230",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-021785982f63348aa",
            "tags": {
              "Name": "datascientest-nat-public-a"
            },
            "tags_all": {
              "Name": "datascientest-nat-public-a"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip_public_a",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b91814b91c7f3991",
            "association_id": "eipassoc-0cc73e03fb68d44b1",
            "connectivity_type": "public",
            "id": "nat-03895df049faaa515",
            "network_interface_id": "eni-0548e3d0806649195",
            "private_ip": "10.1.1.73",
            "public_ip": "13.39.95.91",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-078c51ae083fdf364",
            "tags": {
              "Name": "datascientest-nat-public-b"
            },
            "tags_all": {
              "Name": "datascientest-nat-public-b"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip_public_b",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_appa_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07afe0b6f20343cf41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03063bc6db5dc7926",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07afe0b6f20343cf4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip_public_a",
            "module.networking.aws_nat_gateway.gw_public_a",
            "module.networking.aws_route_table.rtb_appa",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_appb_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f0b1ce305594d9601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03895df049faaa515",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f0b1ce305594d960",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip_public_b",
            "module.networking.aws_nat_gateway.gw_public_b",
            "module.networking.aws_route_table.rtb_appb",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fac8e225ae4050ee",
            "id": "r-rtb-013cc712153f060381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013cc712153f06038",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.datascientest_igateway",
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_appa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:route-table/rtb-07afe0b6f20343cf4",
            "id": "rtb-07afe0b6f20343cf4",
            "owner_id": "885801475464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03063bc6db5dc7926",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "datascientest-appa-routetable"
            },
            "tags_all": {
              "Name": "datascientest-appa-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_appb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:route-table/rtb-0f0b1ce305594d960",
            "id": "rtb-0f0b1ce305594d960",
            "owner_id": "885801475464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03895df049faaa515",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "datascientest-appb-routetable"
            },
            "tags_all": {
              "Name": "datascientest-appb-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:route-table/rtb-013cc712153f06038",
            "id": "rtb-013cc712153f06038",
            "owner_id": "885801475464",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fac8e225ae4050ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "datascientest-public-routetable"
            },
            "tags_all": {
              "Name": "datascientest-public-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_appa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066b258930e6f8407",
            "route_table_id": "rtb-07afe0b6f20343cf4",
            "subnet_id": "subnet-03da44c9f285fb788"
          },
          "dependencies": [
            "module.networking.aws_route_table.rtb_appa",
            "module.networking.aws_subnet.app_subnet_a",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_appb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066b0f806823cd97d",
            "route_table_id": "rtb-0f0b1ce305594d960",
            "subnet_id": "subnet-09c9cdd264da7677f"
          },
          "dependencies": [
            "module.networking.aws_route_table.rtb_appb",
            "module.networking.aws_subnet.app_subnet_b",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6ee56eb7f563cd3",
            "route_table_id": "rtb-013cc712153f06038",
            "subnet_id": "subnet-021785982f63348aa"
          },
          "dependencies": [
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_pubb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09827dacb4426a890",
            "route_table_id": "rtb-013cc712153f06038",
            "subnet_id": "subnet-078c51ae083fdf364"
          },
          "dependencies": [
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:subnet/subnet-03da44c9f285fb788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03da44c9f285fb788",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885801475464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-a"
            },
            "tags_all": {
              "Name": "app-a"
            },
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:subnet/subnet-09c9cdd264da7677f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c9cdd264da7677f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "885801475464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-b"
            },
            "tags_all": {
              "Name": "app-b"
            },
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:subnet/subnet-021785982f63348aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021785982f63348aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885801475464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-a"
            },
            "tags_all": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:subnet/subnet-078c51ae083fdf364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078c51ae083fdf364",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885801475464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-b"
            },
            "tags_all": {
              "Name": "public-b"
            },
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "datascientest_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:vpc/vpc-067ecc288a3c2a0ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a51cf6e37edb4d1d",
            "default_route_table_id": "rtb-0acc5694bd6a4a4b2",
            "default_security_group_id": "sg-0e8e1de8ae3b29391",
            "dhcp_options_id": "dopt-097db8c555b47ad05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-067ecc288a3c2a0ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0acc5694bd6a4a4b2",
            "owner_id": "885801475464",
            "tags": {
              "Name": "datascientest-vpc"
            },
            "tags_all": {
              "Name": "datascientest-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "datascientest_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:network-acl/acl-0a0aaa4f067e4ac2e",
            "egress": [],
            "id": "acl-0a0aaa4f067e4ac2e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "885801475464",
            "subnet_ids": [
              "subnet-021785982f63348aa"
            ],
            "tags": {
              "Name": "acl-datascientest-public-a"
            },
            "tags_all": {
              "Name": "acl-datascientest-public-a"
            },
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "datascientest_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:network-acl/acl-07a49e1e3bf3750f4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-07a49e1e3bf3750f4",
            "ingress": [],
            "owner_id": "885801475464",
            "subnet_ids": [
              "subnet-078c51ae083fdf364"
            ],
            "tags": {
              "Name": "acl-datascientest-public-b"
            },
            "tags_all": {
              "Name": "acl-datascientest-public-b"
            },
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nat_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-270880021",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0a0aaa4f067e4ac2e",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.datascientest_vpc",
            "module.security.aws_network_acl.datascientest_public_a"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nat_inboundb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-800449876",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-07a49e1e3bf3750f4",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.datascientest_vpc",
            "module.security.aws_network_acl.datascientest_public_b"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:security-group/sg-0ae9b1d31b7433153",
            "description": "Allow mysql inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae9b1d31b7433153",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "885801475464",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f2f3acd58390bca8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:security-group/sg-0b1984f04c95c4363",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1984f04c95c4363",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "885801475464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-22"
            },
            "tags_all": {
              "Name": "sg-22"
            },
            "timeouts": null,
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:security-group/sg-0c7c633845bf60039",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7c633845bf60039",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_application_lb",
            "name_prefix": "",
            "owner_id": "885801475464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Datascientest-alb"
            },
            "tags_all": {
              "Name": "Datascientest-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_datascientest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:885801475464:security-group/sg-0dfbcdc9a05d7a597",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfbcdc9a05d7a597",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_datascientest",
            "name_prefix": "",
            "owner_id": "885801475464",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-datascientest"
            },
            "tags_all": {
              "Name": "sg-datascientest"
            },
            "timeouts": null,
            "vpc_id": "vpc-067ecc288a3c2a0ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.0.0/24"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-537336971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dfbcdc9a05d7a597",
            "security_group_rule_id": "sgr-0389b00de45fd80b7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc",
            "module.security.aws_security_group.sg_datascientest"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1412844964",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dfbcdc9a05d7a597",
            "security_group_rule_id": "sgr-0067fa2382ccdad5f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.datascientest_vpc",
            "module.security.aws_security_group.sg_datascientest"
          ]
        }
      ]
    }
  ]
}